# kaizend

./: .gitignore  path_aware.py  products_csv_parser.py  read_file.py  sub_commands.py
exploring_numpy/: Numpy Exercises.ipynb
python_crash_course/: exercise3.py  exercise4.py  exercise6.py
python_crash_course/.ipynb_checkpoints/: 02-Python Crash Course Exercises-checkpoint.ipynb
session-2/.ipynb_checkpoints/: 02-Python Crash Course Exercises-checkpoint.ipynb
session-2/exploring_numpy/: Numpy Exercises.ipynb
session-2/python_crash_course/: exercise3.py  exercise7.py
session-3/: .gitignore  Python Scripting - Managing Files.ipynb  boilerplate.py  file_manager.py  products_csv_parser.py  read_file.py  requirements.txt  sub_commands_with_bacon.py
session-3/labs/: lab_bmi.py  lab_check_stage.py  lab_file_reverser.py  lab_search_words.py
session-4/scripts/: 2_Explore_Forbes_Celebrity_List.ipynb  3_Explore_Wikipedia_Edits.ipynb  4a_Wikipedia_Metrics_Table.ipynb  4b_Wikipedia_Metrics_Plots.ipynb  5_Celebrity_Edits_Time_Series.ipynb
session-5/: challenge1.py  challenge2.py  challenge3.py  challenge4.py  challenge5.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  extra_challenge1.py  extra_challenge2.py  extra_challenge3.py  extra_challenge4.py  extra_challenge5.py  extra_challenge6.py  final_challenge.py  requirements.txt  scrapingjob.py
session-6/: pyproject.toml  test_lower.py
session-6/wallet/: test_wallet.py  test_wallet_class.py  wallet.py
(+1 files in other folders)
