[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Ermita <ryan.ermita@uploan.ph>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
